--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,7 @@ provider:
  name: aws
  runtime: nodejs18.x
  stage: dev
- region: ap-south-1
+ region: us-west-1
 
 custom:
  fileUploadBucketName: ${self:service}-bucket-${self:provider.stage}
