--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@aws-sdk/lib-storage": "^3.354.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "formidable": "^3.4.0"
+    "formidable": "^3.4.0",
+    "stream": "^0.0.2"
   }
 }
